--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -49,7 +49,7 @@ jobs:
 
     - name: Upload Code Coverage Results
       uses: marocchino/sticky-pull-request-comment@v2
-      if: github.event_name == 'pull_request'
+      if: github.event_name == 'push'
       with:
         recreate: true
         path: code-coverage-results.md
